# benedict-chess

./: Cargo.toml  Dockerfile  LICENSE  README.md  SOLVING_E3.md  render.yaml
api/: Cargo.toml
api/src/: main.rs
cli/: Cargo.toml
cli/src/: auto_patch.rs  hash_dump.rs  main.rs  match_runner.rs  optimizer.rs  patch_solver.rs  reachable_extractor.rs  smart_solver.rs  solver.rs  subtree_solver.rs  tree_analyzer.rs  verifier.rs
engine/: Cargo.toml
engine/src/: bitboard.rs  board.rs  book.rs  eval.rs  fen.rs  flip_tests.rs  lib.rs  movegen.rs  moves.rs  search.rs  tables.rs  tt.rs  types.rs  uci.rs  zobrist.rs
