[package]
name = "benedict-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "benedict"
path = "src/main.rs"

[[bin]]
name = "benedict-match"
path = "src/match_runner.rs"

[[bin]]
name = "hash-dump"
path = "src/hash_dump.rs"

[[bin]]
name = "solver"
path = "src/solver.rs"

[[bin]]
name = "patch-solver"
path = "src/patch_solver.rs"

[dependencies]
benedict-engine = { path = "../engine" }
