[package]
name = "benedict-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "benedict"
path = "src/main.rs"

[[bin]]
name = "benedict-match"
path = "src/match_runner.rs"

[[bin]]
name = "hash-dump"
path = "src/hash_dump.rs"

[[bin]]
name = "solver"
path = "src/solver.rs"

[[bin]]
name = "patch-solver"
path = "src/patch_solver.rs"

[[bin]]
name = "verifier"
path = "src/verifier.rs"

[[bin]]
name = "auto-patch"
path = "src/auto_patch.rs"

[[bin]]
name = "optimizer"
path = "src/optimizer.rs"

[[bin]]
name = "tree-analyzer"
path = "src/tree_analyzer.rs"

[[bin]]
name = "reachable-extractor"
path = "src/reachable_extractor.rs"

[dependencies]
benedict-engine = { path = "../engine" }
